00-basic-to-advanced/03-advanced/solutions/daemonset-basic.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: log-collector
spec:
  selector:
    matchLabels:
      app: log-collector
  template:
    metadata:
      labels:
        app: log-collector
    spec:
      containers:
      - name: fluentd
        image: busybox:1.35
        command: ['sh', '-c', 'echo "Collecting logs" && sleep 3600']
