00-basic-to-advanced/03-advanced/solutions/pdb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pdb-deployment
spec:
  replicas: 5
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: nginx
        image: nginx:1.21
